--- a/leku/src/main/res/layout/leku_activity_location_picker.xml
+++ b/leku/src/main/res/layout/leku_activity_location_picker.xml
@@ -11,6 +11,10 @@
       android:id="@+id/map"
       tools:context="com.schibstedspain.leku.LocationPickerActivity"
       android:name="com.huawei.hms.maps.SupportMapFragment"
+      xmlns:map="http://schemas.android.com/apk/res-auto"
+      map:cameraTargetLat="48.893478"
+      map:cameraTargetLng="2.334595"
+      map:cameraZoom="10"
       />
 
   <ImageView
